[project]
name = "pytorch-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytorch-lightning==1.5.6",
    "pyyaml==6.0",
    "tensorboard>=2.2.0",
    "torch==2.3",
    "torchsummary==1.5.1",
    "torchvision>=0.10.1",
]
